# Transaction-service

./: .flake8  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
kuber/: deployment-transactions.yaml  job-migrate-database.yaml  service-transactions.yaml
migrations/: env.py
migrations/versions/: 22d655286e5f_initial_migration.py  32f5bcb8d738_initial_migration.py  431781466d44_initial_commit.py  446a63b97298_initial_migration.py  9e3725b9fd27_create_transactions_tables.py
src/app/: database.py  main.py  models.py  routers.py  schemas.py  transaction.py
src/tests/: test_transaction.py
transactions_chart/: Chart.yaml  values.yaml
transactions_chart/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
