[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Irina Ivashko <ira.ivashko.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
fastapi = "^0.111.1"
uvicorn = "^0.30.5"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.19.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
